use c++ to compile libtirpc

--- a/submodules/Makefile
+++ b/submodules/Makefile
@@ -14,9 +14,9 @@ libtirpc/install:
 	@echo -e "\033[36m----> autogen libtirpc\033[0m"
 	if [ ! -f "libtirpc/configure" ]; then cd libtirpc && ./bootstrap; fi
 	@echo -e "\033[36m----> Configuring libtirpc\033[0m"
-	cd libtirpc && ./configure --disable-gssapi --prefix=$(dir $(realpath $(firstword $(MAKEFILE_LIST))))/libtirpc/install
+	cd libtirpc && ./configure CC=g++ CFLAGS="-fpermissive" CPPFLAGS="-std=c++17 -fpermissive" --disable-gssapi --prefix=$(dir $(realpath $(firstword $(MAKEFILE_LIST))))/libtirpc/install
 	@echo -e "\033[36m----> Building libtirpc\033[0m"
-	$(MAKE) -C libtirpc
+	$(MAKE) -C libtirpc -j 48
 	@echo -e "\033[36m----> Installing libtirpc to ./libtirpc/install\033[0m"
 	$(MAKE) -C libtirpc install
 
