Add optimizations: 1. async batch 2. rdma outstanding request optimization

--- a/cpu/Makefile
+++ b/cpu/Makefile
@@ -31,8 +31,10 @@ SRC_PROXY_CLIENT = $(PROXY_PREFIX)/xdr_memory.cpp		\
 					$(PROXY_PREFIX)/clnt.cpp			\
 					$(PROXY_PREFIX)/measurement.cpp		\
 					$(PROXY_PREFIX)/proxy_header.cpp 	\
+					$(PROXY_PREFIX)/device_buffer.cpp	\
 					$(PROXY_PREFIX)/shm_buffer.cpp		\
-					$(PROXY_PREFIX)/tcpip_buffer.cpp	\
+					$(PROXY_PREFIX)/tcpip_buffer.cpp    \
+					$(PROXY_PREFIX)/async_batch_caller.cpp \
 					$(PROXY_PREFIX)/rdma_buffer.cpp
 
 SRC_PROXY_SERVER = $(PROXY_PREFIX)/dispatch.cpp		\
@@ -40,8 +42,10 @@ SRC_PROXY_SERVER = $(PROXY_PREFIX)/dispatch.cpp		\
 				$(PROXY_PREFIX)/svc.cpp				\
 				$(PROXY_PREFIX)/measurement.cpp		\
 				$(PROXY_PREFIX)/proxy_header.cpp 	\
+				$(PROXY_PREFIX)/device_buffer.cpp	\
 				$(PROXY_PREFIX)/shm_buffer.cpp		\
 				$(PROXY_PREFIX)/tcpip_buffer.cpp	\
+				$(PROXY_PREFIX)/async_batch_caller.cpp \
 				$(PROXY_PREFIX)/rdma_buffer.cpp
 endif
 
