--- a/submodules/Makefile
+++ b/submodules/Makefile
@@ -6,9 +6,10 @@ all: libtirpc cuda-gdb-libs
 clean:
 	@echo -e "\033[31m----> Cleaning up libtirpc\033[0m"
 	$(MAKE) -C libtirpc clean
-	rm -rf cuda-gdb/build
-	cd cuda-gdb && git apply -R ../cuda-gdb.patch
-	rm -rf lib
+	rm -rf libtirpc/install
+	# rm -rf cuda-gdb/build
+	# cd cuda-gdb && git apply -R ../cuda-gdb.patch
+	# rm -rf lib
 
 libtirpc/install:
 	@echo -e "\033[36m----> autogen libtirpc\033[0m"
