--- a/cpu/Makefile
+++ b/cpu/Makefile
@@ -146,6 +146,10 @@ ifdef NO_CACHE_OPTIMIZATION
 CC_FLAGS += -DNO_CACHE_OPTIMIZATION
 endif
 
+ifdef NO_ASYNC_OPTIMIZATION
+CC_FLAGS += -DNO_ASYNC_OPTIMIZATION
+endif
+
 SERVER_LD_FLAGS = $(LD_FLAGS) -lcudart -lcusolver -lcuda -lcublas -lnvidia-ml -lcudnn
 SERVER_BIN_LD_FLAGS = $(SERVER_LD_FLAGS) -Wl,--unresolved-symbols=ignore-in-object-files
 CLIENT_LD_FLAGS = $(LD_FLAGS)
