--- a/cpu/.gitignore
+++ b/cpu/.gitignore
@@ -1,8 +1,10 @@
 *.dump
 client
 cricketd
+cpu_rpc_prot.x
 cpu_rpc_prot.h
 cpu_rpc_prot_clnt.c
 cpu_rpc_prot_svc.c
 cpu_rpc_prot_xdr.c
 cricket-rpc-server
+proxy/dispatch.cpp
