--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "server"
 version = "0.1.0"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -17,6 +18,7 @@ core_affinity = "0.8.1"
 
 [build-dependencies]
 glob = "0.3"
+cc = "1"
 
 [features]
 # default = ["rdma"]
