--- a/cpu/Makefile
+++ b/cpu/Makefile
@@ -141,6 +141,7 @@ INC_FLAGS += -I$(PROXY_PREFIX)
 # add POS include path
 INC_FLAGS += -I../../..
 INC_FLAGS += -I../../../lib
+INC_FLAGS += -I../../../build
 
 LIB_FLAGS += -L$(LIBTIRPC_PREFIX)/lib
 LIB_FLAGS += -L$(CUDA_SRC)/lib64
@@ -150,6 +151,7 @@ LIB_FLAGS += -L$(CUDA_SRC)/lib64/stubs
 LIB_FLAGS += -L../../../lib
 LIB_FLAGS += -lpos
 LIB_FLAGS += -lclang
+LIB_FLAGS += -lyaml-cpp
 
 CC_FLAGS += -std=c++17 -w -fpermissive $(INC_FLAGS) -O0
 # TODO: use extern in header files instead of direct definition e.g. in cpu-common.h to remove -fcommon flag
