--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -24,8 +24,8 @@ crate-type = ["cdylib"]
 
 [features]
 # default = ["rdma"]
-default = ["shm", "emulator"]
-# default = ["shm"]
+# default = ["shm", "emulator"]
+default = ["shm"]
 shm = []
 rdma = []
 emulator = []
