--- a/cpu/Makefile
+++ b/cpu/Makefile
@@ -155,6 +155,7 @@ LIB_FLAGS += -lyaml-cpp
 LIB_FLAGS += -lprotobuf
 LIB_FLAGS += -lprotobuf-lite
 LIB_FLAGS += -lprotoc
+LIB_FLAGS += -luuid
 
 CC_FLAGS += -std=c++17 -w -fpermissive $(INC_FLAGS) -O0
 # TODO: use extern in header files instead of direct definition e.g. in cpu-common.h to remove -fcommon flag
